# csv

./: README.md  main.py  pyproject.toml
src/application/: report_service.py  use_cases.py
src/domain/: entities.py  reports.py
src/infrastructure/: console_printer.py  csv_reader.py  report_registry.py
src/presentation/: cli.py
tests/: conftest.py
tests/test_domain/: __init__.py  test_entities.py
tests/test_infrastructure/: test_console_printer.py  test_csv_reader.py  test_report_registry.py
